[package]
name = "xtouchmini"
version = "0.1.0"
authors = ["Walfie <walfington@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
autopilot = "0.4.0"
futures = "0.3.15"
midir = "0.7.0"
num_enum = "0.5.1"
osascript = "0.3.0"
pin-project-lite = "0.2.6"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_repr = "0.1.7"
smallvec = { version = "1.6.1", features = ["serde"] }
structopt = "0.3.21"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1.6.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
